--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.3",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "^2.31.0",
     "autoprefixer": "10.4.14",
@@ -22,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
+    "tw-elements": "^1.0.0-beta3",
     "typescript": "5.1.6",
     "zustand": "^4.4.0"
   },
