--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "^2.31.0",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
+    "autoprefixer": "^10.4.15",
+    "eslint": "^8.47.0",
+    "eslint-config-next": "^13.4.16",
     "md5": "^2.3.0",
-    "next": "13.4.12",
-    "postcss": "8.4.27",
+    "next": "^13.4.16",
+    "postcss": "^8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
@@ -25,8 +25,8 @@
     "zustand": "^4.4.0"
   },
   "devDependencies": {
-    "@types/node": "20.4.6",
-    "@types/react": "18.2.18",
+    "@types/node": "^20.5.0",
+    "@types/react": "^18.2.20",
     "@types/react-dom": "18.2.7",
     "encoding": "^0.1.13",
     "supabase": "^1.83.7"
