--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier ./src --check",
+    "prettier.fix": "prettier ./src --write"
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.7.4",
@@ -29,6 +31,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "18.2.7",
     "encoding": "^0.1.13",
+    "prettier-plugin-tailwindcss": "^0.5.3",
     "supabase": "^1.83.7"
   }
 }
