--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "^2.31.0",
     "autoprefixer": "^10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.4.16",
+    "lucide-react": "^0.268.0",
     "md5": "^2.3.0",
     "next": "^13.4.16",
     "postcss": "^8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "tw-elements": "^1.0.0-beta3",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
     "zustand": "^4.4.0"
   },
