--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier.fix": "prettier ./src --write"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.1.3",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "^2.31.0",
     "autoprefixer": "^10.4.15",
