--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "prettier.fix": "prettier ./src --write"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.0",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
@@ -29,10 +32,12 @@
     "postcss": "^8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
+    "zod": "^3.22.2",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
