--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.2.2",
     "zod": "^3.22.2",
     "zustand": "^4.4.1"
   },
@@ -51,6 +50,7 @@
     "@types/react-dom": "18.2.7",
     "encoding": "^0.1.13",
     "prettier-plugin-tailwindcss": "^0.5.3",
-    "supabase": "^1.88.0"
+    "supabase": "^1.88.0",
+    "typescript": "^5.2.2"
   }
 }
