--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
+    "@supabase/storage-js": "^2.5.4",
     "@supabase/supabase-js": "^2.33.1",
     "@tanstack/react-table": "^8.9.7",
     "autoprefixer": "^10.4.15",
