--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "types": "npx supabase gen types typescript --project-id yeebxkyqwarhmbfpkgir > ./src/types/database.types.ts",
     "prettier": "prettier ./src --check",
     "prettier.fix": "prettier ./src --write"
   },
