--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    // "noErrorTruncation": true, // Display complete objects on hower
     "plugins": [
       {
         "name": "next"
