--- a/package.json
+++ b/package.json
@@ -23,38 +23,38 @@
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
-    "@supabase/auth-helpers-nextjs": "^0.7.4",
+    "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/storage-js": "^2.5.4",
-    "@supabase/supabase-js": "^2.33.1",
-    "@tanstack/react-table": "^8.10.0",
-    "autoprefixer": "^10.4.15",
+    "@supabase/supabase-js": "^2.36.0",
+    "@tanstack/react-table": "^8.10.1",
+    "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "eslint": "^8.49.0",
-    "eslint-config-next": "^13.4.19",
-    "lucide-react": "^0.276.0",
-    "next": "^13.4.19",
-    "postcss": "^8.4.29",
+    "eslint-config-next": "^13.5.2",
+    "lucide-react": "^0.279.0",
+    "next": "^13.5.2",
+    "postcss": "^8.4.30",
     "react": "18.2.0",
-    "react-day-picker": "^8.8.1",
+    "react-day-picker": "^8.8.2",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.46.1",
+    "react-hook-form": "^7.46.2",
     "react-image-crop": "^10.1.8",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.2.2",
+    "typescript": "5.1.6",
     "zod": "^3.22.2",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@types/node": "^20.6.0",
-    "@types/react": "^18.2.21",
+    "@types/node": "^20.6.3",
+    "@types/react": "^18.2.22",
     "@types/react-dom": "18.2.7",
     "encoding": "^0.1.13",
     "prettier-plugin-tailwindcss": "^0.5.4",
-    "supabase": "^1.93.0"
+    "supabase": "^1.99.5"
   }
 }
