--- a/package.json
+++ b/package.json
@@ -32,8 +32,6 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
-    "eslint": "^8.49.0",
-    "eslint-config-next": "^13.5.2",
     "lucide-react": "^0.279.0",
     "next": "^13.5.2",
     "postcss": "^8.4.30",
@@ -45,7 +43,6 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.1.6",
     "zod": "^3.22.2",
     "zustand": "^4.4.1"
   },
@@ -54,7 +51,10 @@
     "@types/react": "^18.2.22",
     "@types/react-dom": "18.2.7",
     "encoding": "^0.1.13",
+    "eslint": "^8.49.0",
+    "eslint-config-next": "^13.5.2",
     "prettier-plugin-tailwindcss": "^0.5.4",
-    "supabase": "^1.99.5"
+    "supabase": "^1.99.5",
+    "typescript": "^5.2.2"
   }
 }
