--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/storage-js": "^2.5.4",
-    "@supabase/supabase-js": "^2.36.0",
+    "@supabase/supabase-js": "2.36.0",
+    "@tanstack/react-query": "^4.35.3",
+    "@tanstack/react-query-devtools": "^4.35.3",
     "@tanstack/react-table": "^8.10.1",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
@@ -43,6 +45,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.2.2",
     "zod": "^3.22.2",
     "zustand": "^4.4.1"
   },
@@ -54,7 +57,6 @@
     "eslint": "^8.49.0",
     "eslint-config-next": "^13.5.2",
     "prettier-plugin-tailwindcss": "^0.5.4",
-    "supabase": "^1.99.5",
-    "typescript": "^5.2.2"
+    "supabase": "^1.99.5"
   }
 }
