--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -5,7 +5,7 @@ on:
   #   branches: [ main ]
   # pull_request:
   #   branches: [ main ]
-  # workflow_dispatch:
+  workflow_dispatch:
   # schedule:
   #   - cron: '0 0 * * *' # Runs every day at midnight
 jobs:   
