--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -22,10 +22,13 @@ jobs:
       - uses: supabase/setup-cli@v1
         with:
           version: latest
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
       - name: Backup roles
-        run: supabase db dump --db-url "$supabase_db_url" -f roles.sql --role-only
+        run: supabase db dump --db-url "$supabase_db_url" -f roles-${{ steps.date.outputs.date }}.sql --role-only
       - name: Backup schema
-        run: supabase db dump --db-url "$supabase_db_url" -f schema.sql
+        run: supabase db dump --db-url "$supabase_db_url" -f ./backup/schema.sql
       - name: Backup data
         run: supabase db dump --db-url "$supabase_db_url" -f data.sql --data-only --use-copy
 
