--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -22,16 +22,20 @@ jobs:
       - uses: supabase/setup-cli@v1
         with:
           version: latest
-      # - name: Get current date
-      #   id: date
-      #   run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
-      # - name: Backup roles
-      #   run: supabase db dump --db-url "$supabase_db_url" -f roles-${{ steps.date.outputs.date }}.sql --role-only
+      - name: Set datetime output
+        # run: echo "::set-output name={name}::{value}"
+        id: date
+        run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+        # run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+      - name: Backup roles
+        run: supabase db dump --db-url "$supabase_db_url" -f roles-${{ steps.date.outputs.date }}.sql --role-only
       - name: Backup schema
-        run: supabase db dump --db-url "$supabase_db_url" -f ./backup/schema.sql
+        run: supabase db dump --db-url "$supabase_db_url" -f schema.sql
       - name: Backup data
         run: supabase db dump --db-url "$supabase_db_url" -f data.sql --data-only --use-copy
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Supabase backup
+
+# date +"%Y%m%d-%H"%M%S          
