--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -28,7 +28,7 @@ jobs:
         id: date
         run: echo "date=$(date +'%Y%m%d-%H%M%S')" >> $GITHUB_OUTPUT
       - name: Backup roles
-        run: supabase db dump --db-url "$supabase_db_url" -f backup/${{ steps.date.outputs.date }}-roles.sql --role-only
+        run: supabase db dump --db-url "$supabase_db_url" -f .backup/${{ steps.date.outputs.date }}-roles.sql --role-only
       - name: Backup schema
         run: supabase db dump --db-url "$supabase_db_url" -f ".backup/${{ steps.date.outputs.date }}-schema.sql"
       - name: Backup data
@@ -37,5 +37,5 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Supabase backup
-          branch: backup
-          create_branch: true
+          # branch: backup
+          # create_branch: true
