--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -28,14 +28,12 @@ jobs:
         id: date
         run: echo "date=$(date +'%Y%m%d-%H%M%S')" >> $GITHUB_OUTPUT
       - name: Backup roles
-        run: supabase db dump --db-url "$supabase_db_url" -f .backup/${{ steps.date.outputs.date }}-roles.sql --role-only
+        run: supabase db dump --db-url "$supabase_db_url" -f ".backup/${{ steps.date.outputs.date }}-roles.sql" --role-only
       - name: Backup schema
         run: supabase db dump --db-url "$supabase_db_url" -f ".backup/${{ steps.date.outputs.date }}-schema.sql"
       - name: Backup data
-        run: supabase db dump --db-url "$supabase_db_url" -f ${{ steps.date.outputs.date }}-data.sql --data-only --use-copy
+        run: supabase db dump --db-url "$supabase_db_url" -f ".backup/${{ steps.date.outputs.date }}-data.sql" --data-only --use-copy
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Supabase backup
-          # branch: backup
-          # create_branch: true
