--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,21 @@
 {
-  "extends": "next/core-web-vitals",
-  "ignorePatterns": ["**/src/types/database.types.ts"],
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:storybook/recommended"
+  ],
+  "ignorePatterns": [
+    "**/src/types/database.types.ts"
+  ],
   "rules": {
-    "no-console": ["warn", { "allow": ["info", "error"] }],
+    "no-console": [
+      "warn",
+      {
+        "allow": [
+          "info",
+          "error"
+        ]
+      }
+    ],
     "no-unused-vars": "off"
   }
 }
