--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "types": "npx supabase gen types typescript --project-id yeebxkyqwarhmbfpkgir > ./src/types/database.types.ts",
     "prettier": "prettier ./src --check",
-    "prettier.fix": "prettier ./src --write"
+    "prettier.fix": "prettier ./src --write",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -26,7 +28,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/storage-js": "^2.5.4",
-    "@supabase/supabase-js": "2.37.0",
+    "@supabase/supabase-js": "2.38.0",
     "@tanstack/react-query": "^4.35.7",
     "@tanstack/react-table": "^8.10.3",
     "autoprefixer": "^10.4.16",
@@ -37,6 +39,7 @@
     "lucide-react": "^0.284.0",
     "next": "^13.5.4",
     "postcss": "^8.4.31",
+    "prettier-plugin-tailwindcss": "^0.5.5",
     "react": "18.2.0",
     "react-day-picker": "^8.8.2",
     "react-dom": "18.2.0",
@@ -50,13 +53,22 @@
     "zustand": "^4.4.2"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.4.6",
+    "@storybook/addon-interactions": "^7.4.6",
+    "@storybook/addon-links": "^7.4.6",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.4.6",
+    "@storybook/nextjs": "^7.4.6",
+    "@storybook/react": "^7.4.6",
+    "@storybook/testing-library": "^0.2.2",
     "@types/node": "^20.8.2",
     "@types/react": "^18.2.24",
-    "@types/react-dom": "18.2.8",
+    "@types/react-dom": "18.2.10",
     "encoding": "^0.1.13",
     "eslint": "^8.50.0",
     "eslint-config-next": "^13.5.4",
-    "prettier-plugin-tailwindcss": "^0.5.4",
+    "eslint-plugin-storybook": "^0.6.14",
+    "storybook": "^7.4.6",
     "supabase": "^1.100.1"
   }
 }
