--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "types": "npx supabase gen types typescript --project-id yeebxkyqwarhmbfpkgir > ./src/types/database.types.ts",
     "prettier": "prettier ./src --check",
-    "prettier.fix": "prettier ./src --write"
+    "prettier.fix": "prettier ./src --write",
+    "outdated": "pnpm .develop/get-update-dependences.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -27,8 +28,8 @@
     "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/storage-js": "^2.5.4",
     "@supabase/supabase-js": "2.38.0",
-    "@tanstack/react-query": "^4.35.7",
-    "@tanstack/react-table": "^8.10.3",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-table": "^8.10.6",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -50,11 +51,11 @@
     "zustand": "^4.4.3"
   },
   "devDependencies": {
-    "@types/node": "^20.8.2",
+    "@types/node": "^20.8.3",
     "@types/react": "^18.2.25",
-    "@types/react-dom": "18.2.10",
+    "@types/react-dom": "18.2.11",
     "encoding": "^0.1.13",
-    "eslint": "^8.50.0",
+    "eslint": "^8.51.0",
     "eslint-config-next": "^13.5.4",
     "prettier-plugin-tailwindcss": "^0.5.5",
     "supabase": "^1.100.1"
