--- a/package.json
+++ b/package.json
@@ -29,17 +29,17 @@
     "@supabase/storage-js": "^2.5.4",
     "@supabase/supabase-js": "2.38.1",
     "@tanstack/react-query": "^4.36.1",
-    "@tanstack/react-table": "^8.10.6",
+    "@tanstack/react-table": "^8.10.7",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
-    "lucide-react": "^0.286.0",
-    "next": "^13.5.4",
+    "lucide-react": "^0.287.0",
+    "next": "13.5.4",
     "postcss": "^8.4.31",
     "react": "18.2.0",
-    "react-day-picker": "^8.8.2",
+    "react-day-picker": "^8.9.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-image-crop": "^10.1.8",
@@ -51,7 +51,7 @@
     "zustand": "^4.4.3"
   },
   "devDependencies": {
-    "@types/node": "^20.8.5",
+    "@types/node": "^20.8.6",
     "@types/react": "^18.2.28",
     "@types/react-dom": "18.2.13",
     "encoding": "^0.1.13",
